<resources>
    <string name="app_name">FirestoreChatJava</string>
    <string name="Welcome_Back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="sign_in">SIGN_IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in1">Sign In</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a Message</string>
    <string name="online">Online</string>
    <string name="ok" />
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>